# DualSPH4.x

./: .gitignore
EXECS/: DualSPHysics4CPU_linux64  info_linux.txt
HELP/: BoundaryVTK4_Help.out  CaseTemplate.xml  ComputeForces4_Help.out  DualSPHysics4_Help.out  FloatingInfo4_Help.out  GenCase4_Help.out  IsoSurface4_Help.out  MeasureTool4_Help.out  PartVTK4_Help.out  PartVTKOut4_Help.out  readme.txt
MOTION/: Motion01.xml  Motion02.xml  Motion03.xml  Motion04.xml  Motion05.xml  Motion06.xml  Motion07.xml  Motion08.xml  Motion08mov_f3.txt  Motion09.xml  Motion09mov_deg.csv  Motion09mov_rad.csv  Motion_linux64.sh  readme.txt
RUN_DIRECTORY/10_CASEDEM/: CaseBowling_Def.xml  CaseBowling_linux64_CPU.sh  CaseBowling_linux64_GPU.sh  CaseSolids_Def.xml  CaseSolids_linux64_CPU.sh  CaseSolids_linux64_GPU.sh  Floating_Materials.xml
RUN_DIRECTORY/11_CASEMULTIPHASE/: CaseTwoPhases_Def.xml  CaseTwoPhases_FINE_Def.xml  CaseTwoPhases_FINE_linux64_GPU.sh  CaseTwoPhases_linux64_GPU.sh
RUN_DIRECTORY/1_CASEDAMBREAK/: CaseDambreakVal2D_linux64_CPU.sh  CaseDambreakVal2D_linux64_GPU.sh  CaseDambreak_Def.xml  CaseDambreak_linux64_CPU.sh  CaseDambreak_linux64_GPU.sh
RUN_DIRECTORY/2_CASEPERIODICITY/: CasePeriodicity_Def.xml  CasePeriodicity_linux64_CPU.sh  CasePeriodicity_linux64_GPU.sh
RUN_DIRECTORY/3_CASEMOVINGSQUARE/: CaseMovingSquare_Def.xml  CaseMovingSquare_NoShifting_linux64_CPU.sh  CaseMovingSquare_NoShifting_linux64_GPU.sh  CaseMovingSquare_linux64_CPU.sh  CaseMovingSquare_linux64_GPU.sh
RUN_DIRECTORY/4_CASEFORCES/: CaseForcesData_0.csv  CaseForces_Def.xml  CaseForces_linux64_CPU.sh  CaseForces_linux64_GPU.sh
RUN_DIRECTORY/5_CASESLOSHING/: CaseFloating_Def.xml  CaseSloshingAcc_Def.xml  CaseSloshingAcc_PointsPressure_Correct.txt  CaseSloshingAcc_PointsPressure_Incorrect.txt  CaseSloshingAcc_linux64_CPU.sh  CaseSloshingAcc_linux64_GPU.sh  CaseSloshingMotion_Def.xml  CaseSloshingMotion_PointsPressure_Correct.csv  CaseSloshingMotion_PointsPressure_Incorrect.csv  CaseSloshingMotion_linux64_CPU.sh  CaseSloshingMotion_linux64_GPU.sh  EXP_Pressure_SPHERIC_Benchmark#10.txt  __Sloshing_Rotation.ods
RUN_DIRECTORY/6_CASEWAVEMAKER/: CaseWavemaker2D_Def.xml  CaseWavemaker2D_Structure.stl  CaseWavemaker2D_linux64_CPU.sh  CaseWavemaker2D_linux64_GPU.sh  CaseWavemaker2D_wg1_2D.txt  CaseWavemaker2D_wg2_2D.txt  CaseWavemaker2D_wg3_2D.txt  CaseWavemaker_Def.xml  CaseWavemaker_PointsHeights.txt  CaseWavemaker_linux64_CPU.sh  CaseWavemaker_linux64_GPU.sh  CaseWavemaker_wg0_3D.txt  EXP_CaseWavemaker2D_CIEMito.txt
RUN_DIRECTORY/7_CASEWAVEGENERATION/: CaseWavesIRREG_Def.xml  CaseWavesIRREG_linux64_CPU.sh  CaseWavesIRREG_linux64_GPU.sh  CaseWavesREG_Def.xml  CaseWavesREG_linux64_CPU.sh  CaseWavesREG_linux64_GPU.sh  WavesIRREG_SPHvsTheory.ods  WavesREG_SPHvsTheory.ods  heights.txt  velocity.txt
RUN_DIRECTORY/8_CASEFLOATING/: CaseFloatingSphereVal2D_Def.xml  CaseFloatingSphereVal2D_linux64_CPU.sh  CaseFloatingSphereVal2D_linux64_GPU.sh  CaseFloatingWavesVal_Def.xml  CaseFloatingWavesVal_heights.txt  CaseFloatingWavesVal_linux64_CPU.sh  CaseFloatingWavesVal_linux64_GPU.sh  CaseFloating_linux64_CPU.sh  CaseFloating_linux64_GPU.sh  EXP_FloatingSphereVal2D_Displacement_Fekken2004.txt  EXP_FloatingSphereVal2D_Displacement_Moyo&Greenhow2000.txt  EXP_FloatingSphereVal2D_Velocity_Fekken2004.txt  EXP_FloatingSphereVal2D_Velocity_Moyo&Greenhow2000.txt  EXP_FloatingWavesVal_Hadzic_et_al_2005.ods  EXP_FloatingWavesVal_Hadzic_et_al_2005.txt
RUN_DIRECTORY/9_CASEPUMP/: CasePump_Def.xml  CasePump_linux64_CPU.sh  CasePump_linux64_GPU.sh  (+2 more)
SOURCE/DualSPHysics_v4/Source/: CMakeLists.txt  JCellDivCpu.cpp  JCellDivCpu.h  JCellDivCpuSingle.cpp  JCellDivCpuSingle.h  JCellDivGpu.cpp  JCellDivGpu.h  JCellDivGpuSingle.cpp  JCellDivGpuSingle.h  JCellDivGpuSingle_ker.cu  JCellDivGpuSingle_ker.h  JCellDivGpu_ker.cu  JCellDivGpu_ker.h  JCfgRun.cpp  JSpaceCtes.cpp  JSpaceEParms.cpp  JSpaceParts.cpp  JSph.cpp  JSph.h  JSphCpu.cpp  JSphCpu.h  JSphCpuSingle.cpp  JSphCpuSingle.h  JSphGpu.cpp  JSphGpu.h  JSphGpuSingle.cpp  JSphGpuSingle.h  JSphGpu_ker.cu  JSphGpu_ker.h  JSphTimersCpu.h  JSphTimersGpu.h  Types.h  main.cpp
(+17 files in other folders)
